--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,14 @@
-$color: red;
+@import "variables";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
-  background-color: $color;
+  background: $light-color;
+  color: $dark-color;
+  font-family: $font-stack;
+  line-height: 1.5;
 }
